refactor: split users module from auth module
