# packages/monolith-sample/server/src/modules/users/router.ts
@@ -1,0 +1,18 @@
+import { Router } from "express";
+
+import { EnsureAuthenticated } from "../../common/middlewares/EnsureAuthenticated";
+import { DeleteUserController } from "./useCases/DeleteUser/DeleteUserController";
+import { UpdateUserController } from "./useCases/UpdateUser/UpdateUserController";
+import { UpdateUserValidator } from "./useCases/UpdateUser/UpdateUserValidator";
+
+const usersRouter = Router();
+
+const updateUserController = new UpdateUserController();
+const deleteUserController = new DeleteUserController();
+
+usersRouter.use(EnsureAuthenticated);
+
+usersRouter.put("/", UpdateUserValidator, updateUserController.handle);
+usersRouter.delete("/", deleteUserController.handle);
+
+export { usersRouter };
